Fixed bug #37256 (php-fastcgi dosen't handle connection abort)